--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "photo-gallery": {
+    "images-from-the-aether": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/photo-gallery",
+            "outputPath": "dist/images-from-the-aether",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "photo-gallery:build"
+            "browserTarget": "images-from-the-aether:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "photo-gallery:build:production"
+              "browserTarget": "images-from-the-aether:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "photo-gallery:build"
+            "browserTarget": "images-from-the-aether:build"
           }
         },
         "test": {
@@ -118,16 +118,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "photo-gallery:serve"
+            "devServerTarget": "images-from-the-aether:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "photo-gallery:serve:production"
+              "devServerTarget": "images-from-the-aether:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "photo-gallery"
+  "defaultProject": "images-from-the-aether"
 }
