--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@ngxs/store": "^3.7.1",
+    "file-saver": "^2.0.5",
     "http-status-codes": "^2.1.4",
     "ngx-virtual-scroller": "^4.0.3",
     "rxjs": "~6.6.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@ngxs/devtools-plugin": "^3.7.2",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
