Set deploy options in config file
This allows running just `ng deploy`
without the `--base-href=/images-from-the-aether/` option.

--- a/angular.json
+++ b/angular.json
@@ -128,7 +128,9 @@
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
-          "options": {}
+          "options": {
+            "baseHref": "/images-from-the-aether/"
+          }
         }
       }
     }
