--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,6 +3,7 @@ name: pull-request
 on:
   pull_request:
     # branches: [ main ]
+
 jobs:
   verify:
     runs-on: ubuntu-latest
@@ -17,4 +18,4 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: ng test --browsers=ChromeHeadless --watch=false
