--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -18,4 +18,4 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: ng test --browsers=ChromeHeadless --watch=false
+        run: npm test -- --browsers=ChromeHeadless --watch=false
