--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,7 +5,7 @@ on:
     # branches: [ main ]
 
 jobs:
-  verify:
+  unit-test:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
