--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@angular/platform-browser": "~12.2.7",
     "@angular/platform-browser-dynamic": "~12.2.7",
     "@angular/router": "~12.2.7",
-    "@ngxs/store": "^3.7.1",
+    "@ngxs/store": "^3.7.2",
     "file-saver": "^2.0.5",
     "http-status-codes": "^2.1.4",
     "ngx-virtual-scroller": "^4.0.3",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -40,8 +40,8 @@
     "@angular/compiler-cli": "~12.2.7",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@types/file-saver": "^2.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "^3.9.1",
+    "@types/node": "^12.20.26",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "angular-cli-ghpages": "^1.0.0-rc.2",
@@ -52,7 +52,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ng2-mock-component": "^0.2.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
