Bubble CI cmd up to `npm` level
This allows running the same thing locally on the command line,
 if desired, with `npm run test-headless`.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "npx ng test",
+    "test-headless": "npx ng test --browsers=ChromeHeadless --watch=false",
     "lint": "npx ng lint",
     "e2e": "ng e2e"
   },
