--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test -- --browsers=ChromeHeadless --watch=false
+        run: npm run test-headless
 
   lint:
     runs-on: ubuntu-latest
