Add support for testing on Firefox (#4)
* Install Firefox testing framework

Can now run ` npx ng test --browsers=Firefox`.
Reference https://github.com/karma-runner/karma-firefox-launcher

* Configure CI to run firefox and chrome

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "npx ng test",
-    "test-headless": "npx ng test --browsers=ChromeHeadless --watch=false",
+    "test": "npm run test:chrome && npm run test:firefox",
+    "test:watch": "npx ng test",
+    "test:chrome": "npx ng test --browsers=ChromeHeadless --watch=false",
+    "test:firefox": "npx ng test --browsers=FirefoxHeadless --watch=false",
     "lint": "npx ng lint",
     "e2e": "ng e2e"
   },
@@ -52,6 +54,7 @@
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-firefox-launcher": "^2.1.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "ng2-mock-component": "^0.2.0",
