--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npx ng test",
     "test:chrome": "npx ng test --browsers=ChromeHeadless --watch=false",
     "test:firefox": "npx ng test --browsers=FirefoxHeadless --watch=false",
+    "test:edge": "npx ng test --browsers=EdgeHeadless --watch=false",
     "lint": "npx ng lint",
     "e2e": "ng e2e"
   },
@@ -54,6 +55,7 @@
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^2.1.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
