--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -22,8 +22,14 @@ jobs:
       - run: npm run test:${{matrix.browser}}
 
   unit-test-edge:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
+      - run: curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+      - run: sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
+      - run: sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
+      - run: sudo rm microsoft.gpg
+      - run: sudo apt update
+      - run: sudo apt install microsoft-edge-dev
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
