--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
+    "@chiragrupani/karma-chromium-edge-launcher": "^2.1.1",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "^3.9.1",
