--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -22,14 +22,8 @@ jobs:
       - run: npm run test:${{matrix.browser}}
 
   unit-test-edge:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - run: curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
-      - run: sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
-      - run: sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
-      - run: sudo rm microsoft.gpg
-      - run: sudo apt update
-      - run: sudo apt install microsoft-edge-dev
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -37,7 +31,6 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run test:edge
-
 
   lint:
     runs-on: ubuntu-latest
