--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -21,6 +21,17 @@ jobs:
       - run: npm install
       - run: npm run test:${{matrix.browser}}
 
+  unit-test-edge:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+      - run: npm install
+      - run: npm run test:edge
+
   lint:
     runs-on: ubuntu-latest
     steps:
