--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npx ng test",
     "test:chrome": "npx ng test --browsers=ChromeHeadless --watch=false",
     "test:firefox": "npx ng test --browsers=FirefoxHeadless --watch=false",
+    "test:edge": "npx ng test --browsers=EdgeHeadless --watch=false",
     "lint": "npx ng lint",
     "e2e": "ng e2e"
   },
@@ -41,6 +42,7 @@
     "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.7",
+    "@chiragrupani/karma-chromium-edge-launcher": "^2.1.1",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "^3.9.1",
