--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -42,3 +42,10 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run lint
+
+  markdownlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm install -g markdownlint-cli
+      - run: markdownlint '**/*.md' --ignore node_modules
