--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -48,4 +48,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install -g markdownlint-cli
-      - run: markdownlint '**/*.md' --ignore node_modules
+      - run: npm run markdownlint
